Fix layout bug for speakers panel; Update info for talk.css #14

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -131,6 +131,7 @@
 // Meetup speakers section
 .c-speaker {
   text-align: center;
+  padding: 1em 0 0 1em;
 }
 
 .c-speaker__img {
